スコアはDBに登録すること

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,6 @@
 name: gameStart
 version: '${version}'
-main: plugin.gamestart.GameStart
+main: plugin.gamest art.GameStart
 api-version: '1.20'
+commands:
+  gameStart:
